fix: overflow issues

--- a/WSRS-SWAFO/wwwroot/css/studentViolationStyle.css
+++ b/WSRS-SWAFO/wwwroot/css/studentViolationStyle.css
@@ -30,7 +30,7 @@ h2 {
     gap: 1rem;
     padding: 1.5rem;
     height: auto;
-    height: auto;
+    overflow-x: scroll;
 }
 
 .pane-structure {
